--- a/app/admin/view/system/uploadfile/add.html
+++ b/app/admin/view/system/uploadfile/add.html
@@ -6,7 +6,7 @@
             <div class="layui-input-block layuimini-upload">
                 <input name="url" class="layui-input layui-col-xs6" lay-verify="required" lay-reqtext="请上传文件" placeholder="请上传文件" value="" readonly>
                 <div class="layuimini-upload-btn">
-                    <span><a class="layui-btn" data-upload="url" data-upload-number="one"><i class="fa fa-upload"></i> 上传</a></span>
+                    <span><a class="layui-btn" data-upload="url" data-upload-number="more"><i class="fa fa-upload"></i> 上传</a></span>
                 </div>
             </div>
         </div>
